<resources>
    <string name="app_name">CipherHub</string>
    <string name="change_activity_caesar">Caesar</string>
    <string name="change_activity_vigenere">Vigenere</string>
    <string name="decoded_input">Enter Decoded Text</string>
    <string name="encoded_output">Enter Encoded Text</string>
    <string name="key_vigenere">Enter Vigenere Key</string>
    <string name="key_playfair">Enter Playfair Key</string>
    <string name="change_activity_atbash">Atbash</string>
    <string name="change_activity_polybius">Polybius</string>

    <string name="app_title">CipherHub</string>
    <string name="app_description">Your one-stop shop for all necessary cryptography needs, featuring real-time encoding and decoding of a multitude of famous ciphers, and, our latest feature: Custom Ciphers! The author sincerely hopes you enjoy his little app as he learns how to write software :)</string>

    <string name="caesar_title">Caesar Cipher</string>
    <string name="caesar_description">The Caesar cipher is one of the earliest known and simplest ciphers. It is a type of substitution cipher in which each letter in the plaintext is "shifted" a certain number of places down the alphabet. For example, with a shift of 1, A would be replaced by B, B would become C, and so on.</string>
    <string name="caesar_input_description">We input the plaintext "abcd" in the input field and we pass it to the Caesar cipher.</string>
    <string name="caesar_output_description">The result is clear - "xyza" ("a" shifts 3 backwards to "x"; "b" shifts 3 backwards to "y", and so on.)</string>
    <string name="caesar_input_example">abcd</string>
    <string name="caesar_output_example">xyza</string>
    <string name="caesar_visualisation_description">Visualisation of the Caesar cipher</string>

    <string name="vigenere_title">Vigenere Cipher</string>
    <string name="vigenere_description">The Vigenère cipher (French pronunciation: ​[viʒnɛːʁ]) is a method of encrypting alphabetic text by using a series of interwoven Caesar ciphers, based on the letters of a keyword. It employs a form of polyalphabetic substitution.</string>
    <string name="vigenere_input_description">We input the plaintext "Hi, Rachel!" in the input field and we pass it to the Vigenere cipher.</string>
    <string name="vigenere_key_description">We also give it a key: "Hello" in this case. This key is used in the Vigenere square.</string>
    <string name="vigenere_output_description">And we finally get "Om, Clqoiw!" ("H" corresponds to "H" = "O"; "i" corresponds to "e" = "m")</string>
    <string name="vigenere_input_example">Hi, Rachel!</string>
    <string name="vigenere_key_example">Hello</string>
    <string name="vigenere_output_example">Om, Clqoiw!</string>
    <string name="vigenere_visualisation_description">Visualisation of the Vigenère cipher</string>

    <string name="atbash_title">Atbash Cipher</string>
    <string name="atbash_description">Atbash (Hebrew: אתבש‎; also transliterated Atbaš) is a monoalphabetic substitution cipher originally used to encrypt the Hebrew alphabet. It can be modified for use with any known writing system with a standard collating order. The idea of the cipher is to use a base (the alphabet by default) and reverse it to generate the key ("A" -> "Z", "B" -> "Y", so on).</string>
    <string name="atbash_input_description">We input the plaintext "Hello, Mark!" in the input field and we pass it to the Atbash cipher.</string>
    <string name="atbash_output_description">It takes the plaintext and reverses the entire key (alphabet), giving us the correlating output: "Svool, Nzip!" ("H" corresponds to "S"; "e" to "v" and so on).</string>
    <string name="atbash_input_example">Hello, Mark!</string>
    <string name="atbash_output_example">Svool, Nzip!</string>
    <string name="atbash_visualisation_description">Visualisation of the Atbash cipher</string>

    <string name="polybius_title">Polybius Cipher</string>
    <string name="polybius_description">In cryptography, the Polybius square, also known as the Polybius checkerboard, is a device invented by the Ancient Greeks Cleoxenus and Democleitus, and perfected by the Ancient Greek historian and scholar Polybius, for fractionating plaintext characters so that they can be represented by a smaller set of symbols. This implementation uses a 6x6 square (numbers included for the nerds!)</string>
    <string name="polybius_input_description">We input the plaintext "Gravity" in the input field and we pass it to the Polybius cipher.</string>
    <string name="polybius_output_description">It takes the text and substitutes each character with its position in the 6x6 Polybius square ("a" is 11, "3" is 36), returning "21361144234251" as a result!</string>
    <string name="polybius_input_example">Gravity</string>
    <string name="polybius_output_example">21361144234251</string>
    <string name="polybius_visualisation_description">Visualisation of the Polybius cipher</string>

    <string name="a1z26_title">A1Z26 Cipher</string>
    <string name="a1z26_description">A1Z26 is very simple direct substitution cipher, where each alphabet letter is replaced by its number in the alphabet.</string>
    <string name="a1z26_input_description">We input the plaintext "You're cute!" in the input field and we pass it to the A1Z26 cipher.</string>
    <string name="a1z26_output_description">The cipher converts the characters with the given delimiter (by default "-") and returns "25—15—21'18—5 3—21—20—5!"</string>
    <string name="a1z26_input_example">You\'re Cute!</string>
    <string name="a1z26_output_example">25—15—21\'18—5 3—21—20—5!</string>

    <string name="playfair_title">Playfair Cipher</string>
    <string name="playfair_description">The Playfair cipher or Playfair square or Wheatstone-Playfair cipher is a manual symmetric encryption technique and was the first literal digram substitution cipher. The technique encrypts pairs of letters (bigrams or digrams), instead of single letters as in the simple substitution cipher.</string>
    <string name="playfair_input_description">We input the plaintext "Hide the gold in the tree stump" and the cipher breaks it down into pairs of 2 letters (wherein ones with repeating letters have "x" to separate them)</string>
    <string name="playfair_key_description">We also give it a key: "Playfair Example" in this case. This key is used in the key square generated by the cipher.</string>
    <string name="playfair_otuput_description">We finally get "BMODZ BXDNA BEKUD MUIXM MOUVI F" as our output by identifying the rows, columns and rectangles each pair makes in the key square</string>
    <string name="playfair_input_example">Hide the gold in the tree stump</string>
    <string name="playfair_key_example">Playfair Example</string>
    <string name="playfair_output_example">BMODZ BXDNA BEKUD MUIXM MOUVI F</string>

    <string name="page_one">Page 1</string>
    <string name="page_two">Page 2</string>

    <string name="caesar">Caesar</string>
    <string name="vigenere">Vigenere</string>
    <string name="atbash">Atbash</string>
    <string name="polybius">Polybius</string>
    <string name="a1z26">A1Z26</string>
    <string name="playfair">Playfair</string>

    <string name="caesar_demonstration">CaesarDemonstration</string>
    <string name="vigenere_demonstration">VigenereDemonstration</string>
    <string name="atbash_demonstration">AtbashDemonstration</string>
    <string name="polybius_demonstration">PolybiusDemonstration</string>
    <string name="a1z26_demonstration">A1Z26Demonstration</string>
    <string name="playfair_demonstration">PlayfairDemonstration</string>

    <string name="custom_dialog_hint">Enter Custom Key</string>
    <string name="custom_dialog_positive_button_message">Submit</string>
    <string name="custom_dialog_negative_button_message">Cancel</string>

    <string name="custom_button">Custom</string>
    <string name="custom_reset_button">Reset</string>

    <string name="custom_caesar_title">Custom Caesar</string>
    <string name="custom_caesar_description">If you wanted to somehow simulate even an extra layer of security to your encodings, then you needn\'t fret, because we\'ve got you covered! By pressing the button above, you can input your own key value by which to shift the Cipher!</string>
    <string name="custom_caesar_dialog_message">Set the key (shift amount) for the cipher</string>

    <string name="custom_atbash_title">Custom Atbash</string>
    <string name="custom_atbash_description">If you wanted to somehow simulate even an extra layer of security to your encodings, then you needn\'t fret, because we\'ve got you covered! By pressing the button above, you can input your own alphabetic key value by which to shift the Cipher!</string>
    <string name="custom_atbash_dialog_message">Enter the alphabetic key (shift amount) for the cipher</string>

    <string name="custom_polybius_title">Custom Polybius</string>
    <string name="custom_polybius_description">A way to create your own Polybius square and maximize the customisation opportunities for your Polybius cipher! You\'ll have access to each of the fields in the 6x6 square to change to your pleasure!</string>

    <string name="additional_vigenere_description">In lieu of just inputting a key to which to shift your Vigenere cipher by, we decided to give you the opportunity to ease double encodings with Vigenere (through multiple keys!)</string>
    <string name="custom_polybius_dialog_message">Choose one of the three sections to begin customising the square (each is 1/3 of square).</string>
    <string name="custom_polybius_ref_message_one">First</string>
    <string name="custom_polybius_ref_message_two">Second</string>
    <string name="custom_polybius_ref_message_three">Third</string>

    <string name="toggle_additional_key_text">Additional Key</string>
    <string name="additional_vigenere_title">Vigenere +1</string>

    <string name="custom_a1z26_title">Custom A1Z26</string>
    <string name="custom_a1z26_description">Creating your own custom A1Z26 cipher by inputting your very own key and separator (deliminator) for the encoded A1Z26 output!</string>
    <string name="custom_a1z26_dialog_message">Enter the alphabetic key for the cipher</string>

    <string name="custom_playfair_title">Custom Playfair</string>
    <string name="custom_playfair_description">With this, your Playfair cipher can become even more secure by using </string>



</resources>
