<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableDialogLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDarkColor"
    android:orientation="vertical"
    tools:context="ui.ui_custom.ui_table_key_ciphers.CustomTableDialogFragment">


    <TextView
        android:id="@+id/CustomTableCipherHeading"
        style="@style/Text"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/custom_polybius_dialog_message"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ReferralOne"
            style="@style/DialogReferralText"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/custom_polybius_ref_message_one" />

        <TextView
            android:id="@+id/ReferralTwo"
            style="@style/DialogReferralText"
            android:text="@string/custom_polybius_ref_message_two" />

        <TextView
            android:id="@+id/ReferralThree"
            style="@style/DialogReferralText"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:text="@string/custom_polybius_ref_message_three" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/CustomCipherCancel"
            style="@style/DialogText"

            android:layout_marginRight="60dp"
            android:gravity="center"
            android:text="@string/custom_dialog_negative_button_message"
            android:textColor="@color/cancelButtonColor" />

        <TextView
            android:id="@+id/CustomCipherOk"
            style="@style/DialogText"

            android:gravity="center"
            android:text="@string/custom_dialog_positive_button_message"
            android:textColor="@color/okButtonColor" />
    </LinearLayout>

</LinearLayout>