<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customCipherDialogLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.ui_custom.ui_single_key_ciphers.CustomCipherDialogFragment"
    android:orientation="vertical"
    android:background="@color/backgroundDarkColor"
    >

    <TextView
        android:id="@+id/CustomCipherHeading"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="90dp"

        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:text="@string/custom_caesar_dialog_message"
        android:textFontWeight="@android:integer/config_mediumAnimTime"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toTopOf="@+id/CustomCipherInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp">

        <EditText style="@style/EditText"
            android:id="@+id/CustomCipherInput"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/custom_dialog_hint"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CustomCipherHeading" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal">

        <TextView style="@style/DialogText"
            android:id="@+id/CustomCipherCancel"

            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/custom_dialog_negative_button_message"
            android:textColor="@color/cancelButtonColor" />

        <TextView style="@style/DialogText"
            android:id="@+id/CustomCipherOk"

            android:gravity="center"
            android:text="@string/custom_dialog_positive_button_message"
            android:textColor="@color/okButtonColor" />
    </LinearLayout>

</LinearLayout>