<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.CustomCaesarFragment"
    android:background="@color/backgroundColor">

    <Button
        android:id="@+id/DialogButton"
        style="@style/ColouredButton"
        android:layout_width="127dp"
        android:layout_height="64dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="151dp"
        android:layout_marginRight="151dp"
        android:layout_marginBottom="55dp"
        android:text="@string/change_activity_polybius"
        android:textColorHighlight="#00AF2929"
        app:layout_constraintBottom_toTopOf="@+id/CustomCipherDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CustomCipherTitle" />

    <TextView style="@style/Text"
        android:id="@+id/CustomCipherDescription"
        android:textSize="18dp"
        android:layout_width="340dp"
        android:layout_height="289dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="42dp"
        android:text="@string/app_description"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DialogButton" />

    <TextView style="@style/Text"
        android:id="@+id/CustomCipherTitle"
        android:layout_width="342dp"
        android:layout_height="83dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="60sp"
        app:fontFamily="cursive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>