<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundDarkColor"
    android:id="@+id/quadrupButtonLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="ui.ui_core.QuadrupButtonFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonTwo"
            style="@style/ColouredButton"
            android:layout_width="175dp"
            android:layout_height="71dp"
            android:layout_marginStart="152dp"
            android:layout_marginLeft="152dp"
            android:layout_marginTop="67dp"
            android:layout_marginEnd="152dp"
            android:layout_marginRight="152dp"
            android:layout_marginBottom="40dp"
            android:text="@string/change_activity_vigenere"
            android:textColorHighlight="#00AF2929"
            app:layout_constraintBottom_toTopOf="@+id/buttonThree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonOne" />

        <Button
            android:id="@+id/buttonThree"
            style="@style/ColouredButton"
            android:layout_width="175dp"
            android:layout_height="71dp"
            android:layout_marginStart="151dp"
            android:layout_marginLeft="151dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="152dp"
            android:layout_marginRight="152dp"
            android:layout_marginBottom="40dp"
            android:text="@string/change_activity_atbash"
            android:textColorHighlight="#00AF2929"
            app:layout_constraintBottom_toTopOf="@+id/buttonFour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTwo" />

    <Button
        android:id="@+id/buttonFour"
        style="@style/ColouredButton"
        android:layout_width="175dp"
        android:layout_height="71dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="151dp"
        android:layout_marginRight="151dp"
        android:layout_marginBottom="90dp"
        android:text="@string/change_activity_polybius"
        android:textColorHighlight="#00AF2929"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonThree" />

    <Button
        android:id="@+id/buttonOne"
        style="@style/ColouredButton"
        android:layout_width="175dp"
        android:layout_height="71dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:layout_marginBottom="10dp"
        android:text="@string/change_activity_caesar"
        android:textColorHighlight="#00AF2929"
        app:layout_constraintBottom_toTopOf="@+id/buttonTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>
