<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cipherLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.ui_core.KeyCipherFragment"
    android:background="@color/backgroundDarkColor">

    <EditText
        android:id="@+id/encodedOutput"
        style="@style/EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="218dp"
        android:width="250dp"
        android:ems="10"
        android:hint="@string/encoded_output"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyInput" />

    <EditText
        android:id="@+id/decodedInput"
        style="@style/EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="50dp"
        android:width="250dp"
        android:ems="10"
        android:hint="@string/decoded_input"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/keyInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText style="@style/EditText"
        android:id="@+id/keyInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="60dp"
        android:width="250dp"
        android:ems="10"
        android:hint="@string/key_vigenere"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/encodedOutput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decodedInput" />
</androidx.constraintlayout.widget.ConstraintLayout>